crates/obzenflow_core/tests/compile_fail/effect_outcome_multi_field_variant.stderr
error: effect outcome enum variants must each hold exactly one TypedPayload fact, e.g. `Authorized(PaymentAuthorized)`; unit, struct-like, multi-field, and empty enums are not valid carriers (FLOWIP-120m)
  --> tests/compile_fail/effect_outcome_multi_field_variant.rs:24:5
   |
24 |     Both(FirstFact, SecondFact),
   |     ^^^^
